# problemsolver

./: .gitignore  .pylintrc  LICENSE  Procfile  lint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  reset-database.sh  start-backend.sh  start-frontend.sh  update-questions.py  vite.config.js
backend/: app.py  chat.py  database.py  helpers.py  pyproject.toml  questions.json  questions.py
frontend/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css  utils.js
frontend/src/components/: AnswerItem.vue  CalculatorItem.vue  ChatBubble.vue  FooterItem.vue  Game.vue  HeaderItem.vue  MyButton.vue  NavBar.vue  NotesItem.vue  OverviewItem.vue  PresentationItem.vue  QuestionItem.vue  ToggleButton.vue
frontend/src/components/helpers/: ChatBubble.vue  FooterItem.vue  KeyPad.vue  LoadingAnimation.vue  Menu.vue  MobileMenu.vue  MyButton.vue  NavBar.vue  PresentationItem.vue
frontend/src/stores/: counter.js  info.js  question.js  user.js
frontend/src/views/: HomeView.vue
