[tool.poetry]
name = "problemlosning"
version = "0.1.0"
description = ""
authors = ["Marcus Näslund <naslundx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-Cors = "^3.0.10"
openai = "^0.27.7"
gunicorn = "20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
